@@ -52,14 +52,23 @@
 #  define JIT_RET		_RAX
 #  if __WORDSIZE == 32
 #    define JIT_FRET		_ST0
+typedef jit_uint32_t		jit_regset_t;
 #  else
+#    define JIT_RA0		_RDI
+#    define JIT_FA0		_XMM0
 #    define JIT_FRET		_XMM0
+typedef jit_uint64_t		jit_regset_t;
 #  endif
 #elif defined(__mips__)
+#  define JIT_RA0		_A0
+#  define JIT_FA0		_F12
 #  define JIT_SP		_SP
 #  define JIT_RET		_V0
 #  define JIT_FRET		_F0
+typedef jit_uint64_t		jit_regset_t;
 #elif defined(__arm__)
+#  define JIT_RA0		_R0
+#  define JIT_FA0		_D0
 #  define JIT_SP		_R13
 #  define JIT_RET		_R0
 #  if defined(__ARM_PCS_VFP)
@@ -67,30 +76,46 @@
 #  else
 #    define JIT_FRET		_R0
 #  endif
+typedef jit_uint64_t		jit_regset_t;
 #elif defined(__ppc__) || defined(__powerpc__)
+#  define JIT_RA0		_R3
+#  define JIT_FA0		_F1
 #  define JIT_SP		_R1
 #  define JIT_RET		_R3
 #  define JIT_FRET		_F1
+typedef jit_uint64_t		jit_regset_t;
 #elif defined(__sparc__)
 #  define JIT_SP		_SP
 #  define JIT_RET		_I0
 #  define JIT_FRET		_F0
+typedef jit_uint64_t		jit_regset_t;
 #elif defined(__ia64__)
 #  define JIT_SP		_R12
 #  define JIT_RET		_R8
 #  define JIT_FRET		_F8
+typedef struct {
+    jit_uint64_t	rl;
+    jit_uint64_t	rh;
+    jit_uint64_t	fl;
+    jit_uint64_t	fh;
+} jit_regset_t;
 #elif defined(__hppa__)
 #  define JIT_SP		_R30
 #  define JIT_RET		_R28
 #  define JIT_FRET		_F4
+typedef jit_uint64_t		jit_regset_t;
 #elif defined(__aarch64__)
+#  define JIT_RA0		_R0
+#  define JIT_FA0		_V0
 #  define JIT_SP		_SP
 #  define JIT_RET		_R0
 #  define JIT_FRET		_V0
+typedef jit_uint64_t		jit_regset_t;
 #elif defined(__s390x__)
 #  define JIT_SP		_R15
 #  define JIT_RET		_R2
 #  define JIT_FRET		_F0
+typedef jit_uint32_t		jit_regset_t;
 #endif
 
 #define jit_size(vector)	(sizeof(vector) / sizeof((vector)[0]))
